// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserButton renders the user button 1`] = `
Array [
  <button
    className="cl-user-button-trigger"
    onMouseDown={[Function]}
    type="button"
  >
    <svg
      aria-label="John Doe"
      className="cl-user-button-avatar"
      style={
        Object {
          "height": 32,
          "width": 32,
        }
      }
      version="1.1"
      viewBox="0, 0, 100, 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        John Doe
      </title>
      <circle
        cx="50"
        cy="50"
        fill="currentColor"
        r="49"
        strokeWidth="0"
      />
      <text
        fill="#ffffff"
        fontFamily="inherit"
        fontSize="60"
        fontWeight="400"
        textAnchor="middle"
        x="50"
        y="71.5"
      >
        JD
      </text>
    </svg>
  </button>,
  <div
    className="cl-component cl-user-button-popup"
    style={
      Object {
        "display": "none",
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="cl-user-button-popup-current-account"
    >
      <svg
        aria-label="John Doe"
        className="cl-user-button-avatar"
        style={
          Object {
            "height": 64,
            "width": 64,
          }
        }
        version="1.1"
        viewBox="0, 0, 100, 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          John Doe
        </title>
        <circle
          cx="50"
          cy="50"
          fill="currentColor"
          r="49"
          strokeWidth="0"
        />
        <text
          fill="#ffffff"
          fontFamily="inherit"
          fontSize="60"
          fontWeight="400"
          textAnchor="middle"
          x="50"
          y="71.5"
        >
          JD
        </text>
      </svg>
      <div
        className="cl-user-button-headline"
      >
        Hi, John!
      </div>
      <div
        className="cl-user-button-identifier"
      />
    </div>
    <div
      className="cl-active-accounts-manager"
    >
      <div
        className="cl-active-account-buttonset"
      >
        <button
          className="button outline primary hoverable cl-accounts-manager-button small"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <svg
            data-filename="../shared/assets/icons/cog.svg"
          />
          Manage account
        </button>
        <button
          className="button outline primary hoverable cl-accounts-manager-button small"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <svg
            data-filename="../shared/assets/icons/sign-out.svg"
          />
          Sign out
        </button>
      </div>
      <div
        className="cl-account-switcher"
      >
        <button
          className="button text primary hoverable cl-account-switcher-button cl-account-switcher-add-button"
          onClick={[Function]}
        >
          <div
            className="cl-account-switcher-add-button-icon"
          >
            <svg
              data-filename="../shared/assets/icons/user-plus.svg"
            />
          </div>
          <span>
            Add account
          </span>
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`UserButton renders the user button with name 1`] = `
Array [
  <button
    className="cl-user-button-trigger"
    onMouseDown={[Function]}
    type="button"
  >
    <svg
      aria-label="John Doe"
      className="cl-user-button-avatar"
      style={
        Object {
          "height": 32,
          "width": 32,
        }
      }
      version="1.1"
      viewBox="0, 0, 100, 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        John Doe
      </title>
      <circle
        cx="50"
        cy="50"
        fill="currentColor"
        r="49"
        strokeWidth="0"
      />
      <text
        fill="#ffffff"
        fontFamily="inherit"
        fontSize="60"
        fontWeight="400"
        textAnchor="middle"
        x="50"
        y="71.5"
      >
        JD
      </text>
    </svg>
    <div
      className="cl-user-button-fullname"
    >
      John Doe
    </div>
  </button>,
  <div
    className="cl-component cl-user-button-popup"
    style={
      Object {
        "display": "none",
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="cl-user-button-popup-current-account"
    >
      <svg
        aria-label="John Doe"
        className="cl-user-button-avatar"
        style={
          Object {
            "height": 64,
            "width": 64,
          }
        }
        version="1.1"
        viewBox="0, 0, 100, 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          John Doe
        </title>
        <circle
          cx="50"
          cy="50"
          fill="currentColor"
          r="49"
          strokeWidth="0"
        />
        <text
          fill="#ffffff"
          fontFamily="inherit"
          fontSize="60"
          fontWeight="400"
          textAnchor="middle"
          x="50"
          y="71.5"
        >
          JD
        </text>
      </svg>
      <div
        className="cl-user-button-headline"
      >
        Hi, John!
      </div>
      <div
        className="cl-user-button-identifier"
      />
    </div>
    <div
      className="cl-active-accounts-manager"
    >
      <div
        className="cl-active-account-buttonset"
      >
        <button
          className="button outline primary hoverable cl-accounts-manager-button small"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <svg
            data-filename="../shared/assets/icons/cog.svg"
          />
          Manage account
        </button>
        <button
          className="button outline primary hoverable cl-accounts-manager-button small"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <svg
            data-filename="../shared/assets/icons/sign-out.svg"
          />
          Sign out
        </button>
      </div>
      <div
        className="cl-account-switcher"
      >
        <button
          className="button text primary hoverable cl-account-switcher-button cl-account-switcher-add-button"
          onClick={[Function]}
        >
          <div
            className="cl-account-switcher-add-button-icon"
          >
            <svg
              data-filename="../shared/assets/icons/user-plus.svg"
            />
          </div>
          <span>
            Add account
          </span>
        </button>
      </div>
    </div>
  </div>,
]
`;
